2.35	Some instructions on installation for Windows users.
2.34    Added a check for stray gd.h include files from older installations. If any are
	      found, Makefile.PL will issue a warning.
	Fixed incorrect documentation of GD::Simple->string() method. The method call
	      *does* move the pen.
2.33	Added appropriate #ifdefs to allow to compile under version 5.6.0 (due to lack of
	      threading macros before 5.8).
2.32	Added a GD::Simple->HSVtoRGB() method.
	Documentation fixes from Mark Manning.
	Added a clear() method to GD::Polygon to remove all vertices.
2.31	Fixed GD::Simple->transparent to support symbolic color names.
	Made changes that should render the module thread-safe.
	Changed newSVpv calls to newSVpvn, in hopes of improving performance.
	Added a GD::Simple->HSVtoRGB() method.
	Fixed incorrect freeing of user-provided raw data in newFromGdData() and newFromGd2Data()
		(this caused segfaults; patch provided by Nigel Sandever)
2.30	Migrated polyline() support into GD::Simple.
2.29	Better support for fonts and brushed patterns in GD::Simple
2.28	Having troubles getting all the modules installed correctly. Should work now.
2.27	Reworked the way that GD.pm is created at compile time so that CPAN picks up
	   correct version information. No code changes.
2.26    CPAN isn't propagating GD, so I'll upload another version
2.25    Fixed Makefile.PL so that GD::Polyline and GD::Simple are installed (thanks to Guy Albertelli).
	
2.24	Fixed gif/anim gif support so that you can't have animated gif support without
		having gif support.
	
2.23	Added patch from Slaven Rezic which makes it possible to call GD constants
		in an OO way (without generating warnings), and removes #! from the
		top of autogenerated GD.pm
	Rewrote tests 11 and 12 - if they continue to randomly fail on various
		platforms, they will be removed.
2.22	Changed the way the gd and gd2 round-trip tests are evaluated. This
		might fix test failures that have been reported on some platforms.