@@ -1,4 +1,5 @@
 2.35	Some instructions on installation for Windows users.
+	Doesn't push libpng onto @LIBS unless png support is requested.
 2.34    Added a check for stray gd.h include files from older installations. If any are
 	      found, Makefile.PL will issue a warning.
 	Fixed incorrect documentation of GD::Simple->string() method. The method call
